--- a/SharkCage/CageServiceInstaller/SharkCageInstallerHelper.csproj
+++ b/SharkCage/CageServiceInstaller/SharkCageInstallerHelper.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{E4EBEF34-9BA7-4808-90D5-6B68C5722F72}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CageServiceInstaller</RootNamespace>
-    <AssemblyName>CageServiceInstaller</AssemblyName>
+    <RootNamespace>SharkCageInstallerHelper</RootNamespace>
+    <AssemblyName>SharkCageInstallerHelper</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CageServiceInstaller.cs">
+    <Compile Include="SharkCageInstallerHelper.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ServiceInstaller.cs" />
